<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/ll_main">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/testing_place_holder"
                        android:textSize="50sp"
                        android:paddingLeft="20dp"
                        android:paddingVertical="30dp"
                        android:gravity="center_vertical"
                        android:background="@color/colorAccent"
                        android:textColor="@color/colorTitleDetail"/>

                    <LinearLayout
                        android:id="@+id/image_year_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_detailImage"
                            android:layout_width="180dp"
                            android:layout_height="200dp"
                            android:contentDescription="movie_image_detail"
                            android:src="@mipmap/ic_launcher"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginBottom="10dp"/>

                        <LinearLayout
                            android:id="@+id/date_rating_container"
                            android:layout_width="180dp"
                            android:layout_height="200dp"
                            android:orientation="vertical"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginBottom="10dp">

                            <TextView
                                android:id="@+id/tv_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/testing_place_holder"
                                android:textSize="25sp"
                                android:layout_marginTop="10dp"/>

                            <TextView
                                android:id="@+id/tv_rating"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/testing_place_holder"
                                android:textSize="15sp"
                                android:textColor="@color/colorPrimary"
                                android:layout_marginTop="20dp"/>

                            <Button
                                android:id="@+id/btn_favorite"
                                android:text="@string/favorite_btn_text_add"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/testing_place_holder"
                        android:layout_margin="10dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_margin="10dp"/>

                    <TextView
                        android:text="@string/trailer_section_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_trailers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:useDefaultMargins="true"
                        android:layout_marginHorizontal="10dp"
                        android:rowCount="4">
                    </android.support.v7.widget.RecyclerView>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_margin="10dp"/>

                    <TextView
                        android:text="@string/review_section_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_reviews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:useDefaultMargins="true"
                        android:layout_marginHorizontal="10dp"
                        android:rowCount="4">
                    </android.support.v7.widget.RecyclerView>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_error_message_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/error_message_detail"
                    android:textSize="20sp"
                    android:visibility="invisible" />

            </FrameLayout>
    </FrameLayout>
</ScrollView>